# Geant4NuclearTechnique

./: .gitignore  README.md
MonteCarlo/: EstimatorOfHeads.C  EstimatorOfPi.C
NucTech/: CMakeLists.txt  beam.mac  ionBeam.mac  nucTech.cc  nuctech.cc  processSim.C  process_sim.C  quiet.mac  radioactiveSrc.mac  vis.mac
NucTech/include/: NucTechDetectorConstruction.hh  NucTechSteppingAction.hh
NucTech/macros/: beam.mac  ion_beam.mac  radioactive_source.mac  run.mac  vis.mac
NucTech/src/: NucTechActionInitialization.cc  NucTechDetectorConstruction.cc  NucTechPrimaryGeneratorAction.cc  NucTechRunAction.cc  NucTechSteppingAction.cc
